# Crypto-Analytic-Signal-Bot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODEX.md  LICENSE  LIVE_VALIDATION.md  Makefile  PHASE1_REPORT.md  PHASE2_ANALYSIS.md  PHASE3_PLAN.md  PHASE4_TASKS.md  PROJECT_MAP.md  README.md  SKILL.md  SYSTEM_PROMPT (3).md  SYSTEM_PROMPT (4).md  SYSTEM_PROMPT.md  codex_agent_prompt_v4.md  config.signal_only.toml.example  config.toml  config.toml.example  coverage.xml  docker-compose.yml  env.example  main.py  monitor_bot.py  pyproject.toml  requirements-dev-live.txt  requirements-frozen.txt  requirements-modern.txt  requirements-optional.txt  requirements.txt  run_30min_test.bat  run_check.py  test_bot.py  Аудит _ публичный Binance signal-only бот для Windows 11 и Python 3.13.md
.Jules/: palette.md
.github/: pull_request_template.md
.jules/: bolt.md  sentinel.md
audit/: audit_report.md  audit_report_v2.md
bot/: AGENTS.md  __init__.py  alerts.py  analytics.py  autotuner.py  cli.py  config.py  config_loader.py  confluence.py  dashboard.py  delivery.py  feature_contract.py  feature_flags.py  features.py  features_advanced.py  features_core.py  features_microstructure.py  features_oscillators.py  features_shared.py  features_shared.py.orig  features_structure.py  filters.py  journal.py  market_data.py  market_regime.py  messaging.py  metrics.py  migrations.py  models.py  monitor_bot.py  outcomes.py  public_intelligence.py  runtime_contract.py  runtime_policy.py  scoring.py  secrets.py  setup_base.py  setups.py  startup_reporter.py  strategy_asset_fit.py  (+5 more)
docs/: ARCHITECTURE.md  CALIBRATION_LOG.md  FEATURES_IO_CONTRACT.md  OPERATIONS.md  REMEDIATION_PLAN.md  STRATEGIES.md  V2_GO_NO_GO_SUMMARY.md  codex_execution_2026-05-12.md  competitor_study_2026-05-03.md  dependency_audit_2026-04-28.md  remediation_ledger.md  remediation_report_2.md  rest_audit_response_handling_2026-04-28.md  runtime_feature_contract.md  shortlist_audit_2026-04-28.md  strategy_audit_2026-04-28.md  v2_cycle_after_v1.md  ws_runtime_audit.md
logs/: 00_file_map.md  10_analysis.md  20_master_plan.md  21_outcome_r_recompute.md  21_task_execution.md  22_setup_score_recompute.md  30_validation.md  50_master_plan.md  51_tasks.md  52_final.md  60_db_state.md  61_ws_audit.md  62_shortlist_audit.md  63_kline_audit.md  64_tracking_audit.md  70_final_validation.md  telemetry_calibration_analysis.json  telemetry_calibration_analysis.md  telemetry_calibration_analysis_72h.json  telemetry_calibration_analysis_72h.md
references/: agent-prompts.md  file-ownership.md
reports/: binance_endpoint_registry.md
scripts/: README.md  check_scripts_readme.py  dispatch.sh  live_check_binance_api.py  live_check_enrichments.py  live_check_indicators.py  live_check_pipeline.py  live_check_strategies.py  live_runtime_monitor.py  live_smoke_bot.py  monitor_runtime.py  phase0_forensics.py  phase1_analysis.py  recompute_outcome_r_multiples.py  review.sh  runtime_audit.py  telemetry_analyzer.py  validate_config.py  validate_local.ps1
tests/: conftest.py  remediation_regression_cases.py  test_application_delegation.py  test_audit_report_2_regressions.py  test_backtest_engine.py  test_composite_regime.py  test_config_intelligence.py  test_config_runtime.py  test_confluence_engine.py  test_cycle_runner_regressions.py  test_dashboard_security.py  test_delivery_formatting.py  test_delivery_orchestrator.py  test_event_bus.py  test_feature_contracts.py  test_features.py  test_features_decomposition_parity.py  test_features_group_contracts.py  test_features_group_modules.py  test_filters.py  test_filters_adx_policy.py  test_filters_freshness.py  (+42 more)
(+130 files in other folders)
