[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "SIM117", "UP007"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_audit_artifacts.py" = ["E501", "I001"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
exclude = ["tests/"]

[project]
name = "crypto-signal-bot"
version = "8.0.0"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "polars>=1.39.0",
    "aiohttp>=3.9.0",
    "numpy>=1.26.0",
    "aiogram>=3.27.0",
    "python-binance>=1.0.22",
    "websockets>=14.0,<16.0",
    "aiosqlite>=0.22.1",
    "msgspec>=0.19.0",
    "tenacity>=9.0.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "aioresponses>=0.7",
]
regime = [
    "hmmlearn>=0.3",
    "scikit-learn>=1.4",
]
ml = [
    "joblib>=1.4.2",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "optuna>=4.0",
]
