[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YourProjectName"
version = "0.1.0"
description = "Your project description"
authors = [{ name="Your Name", email="youremail@example.com" }]
license = "MIT"
dependencies = [
    "some-package",
    # other dependencies without duplicates
]

[tool.setuptools]
packages = ["your_package_name"]
include_package_data = true
