[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signal-bot"
version = "8.0.0"
description = "Event-driven cryptocurrency signal bot using Binance USD-M public market data."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Crypto Signal Bot" }]
dependencies = [
    "python-dotenv>=1.2.2",
    "polars>=1.40.1",
    "aiohttp>=3.13.5",
    "numpy>=2.4.4",
    "aiogram>=3.27.0",
    "websockets>=16.0,<17.0",
    "aiosqlite>=0.22.1",
    "msgspec>=0.21.1",
    "tenacity>=9.1.4",
    "structlog>=25.5.0",
    "pydantic>=2.12.5,<2.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "aioresponses>=0.7.8",
]
live = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "prometheus-client>=0.25.0",
    "orjson>=3.11.8",
    "polars_ta>=0.5.17",
    "psutil>=7.2.2",
]
regime = [
    "hmmlearn>=0.3.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]
ml = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "regression_remediation: remediation regression coverage umbrella",
    "regression_remediation_runtime: remediation runtime/intra-candle flow checks",
    "regression_remediation_indicators: remediation indicators and market microstructure checks",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
files = ["bot"]
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = false

